# fri

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  .travis.yml  404.html  CNAME  LICENSE  MANIFEST.in  README.md  circle.yml  environment.yml  experiments.py  experiments2.py  experiments3.py  experiments4.py  fri.sublime-project  fri.sublime-workspace  genindex.html  index.html  lupi_test.py  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  script2.py  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml  test.ipynb
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: classification.doctree  ordinalregression.doctree  regression.doctree  user.doctree
.doctrees/auto_examples/: index.doctree  plot_fri_regression.doctree  plot_genData.doctree  plot_genData_weak.doctree  plot_genregressionData.doctree  sg_execution_times.doctree
.doctrees/notebooks/: Guide.doctree
.github/: dependabot.yml
.github/workflows/: deploy_pypi.yml  docs.yml  pythonpackage.yml  test.yml
_downloads/039b5aa95ddc49a2a1fcbde292364e32/: plot_genData_weak.ipynb
_downloads/1dc5ffc4cf8479b8f4bbd7f5fc9ebe6e/: plot_genregressionData.py
_downloads/54cd46881bdd5b4e481cab74b0adc17b/: plot_fri_regression.ipynb
_downloads/560ef36da75d60298e331d473d927590/: plot_fri_regression.py
_downloads/d92a57db91eb75530de5defe928b3ff8/: plot_genregressionData.ipynb
_downloads/e7a4c294fe8141173d5f78088e261da5/: plot_genData.ipynb
_modules/: index.html
_modules/fri/: base.html  classification.html  genData.html  optproblems.html  ordinalregression.html  plot.html  regression.html
_modules/sklearn/: base.html
_sources/: index.rst.txt
_sources/api/: ordinalregression.rst.txt  user.rst.txt
_sources/auto_examples/: index.rst.txt  plot_fri_regression.rst.txt  plot_genData.rst.txt  plot_genData_weak.rst.txt  plot_genregressionData.rst.txt  sg_execution_times.rst.txt
_sources/notebooks/: Guide.ipynb.txt
_static/: documentation_options.js
api/: classification.html  ordinalregression.html  regression.html  user.html
auto_examples/: index.html  plot_fri_regression.html  plot_genData.html  plot_genData_weak.html  plot_genregressionData.html  sg_execution_times.html
binder/: environment.yml
ci_scripts/: create_testenv.sh  install_miniconda.sh
ci_scripts/travis/: install.sh  success.sh  test.sh
dev_scripts/: eval_comm_detection.py  exp_tools.py  test_1.py
doc/: Makefile  classification.rst  conf.py  datagen.rst  index.rst  model.rst  regression.rst  template.rst
doc/auto_examples/: index.rst  plot_ensemble.ipynb  plot_ensemble.py  plot_ensemble.py.md5  plot_ensemble.rst  plot_ensemble_codeobj.pickle  plot_fri_regression.ipynb  plot_fri_regression.py.md5  plot_fri_regression.rst  plot_fri_regression_codeobj.pickle  plot_genData.ipynb  plot_genData.py.md5  plot_genData.rst  plot_genData_codeobj.pickle  plot_genData_weak.ipynb  plot_genData_weak.rst  plot_genregressionData.ipynb  plot_genregressionData.rst  plot_genregressionData_codeobj.pickle
doc/source/: background.rst  conf.py  index.rst  license.rst
docs/: CNAME  Guide.ipynb  Guide.md  background.md  citing_FRI.md  index.html  index.md  references.md
docs/Guide/: index.html
docs/background/: index.html
docs/citing_FRI/: index.html
docs/references/: index.html
examples/: Comparison to other feature selection approaches (Classification).ipynb  Simple Example Classification Data.ipynb  Simple Example Regression Data.ipynb  Simple Example.ipynb  plot_ensemble.py  plot_fri_regression.py  plot_genData.py  plot_genData_weak.py  plot_genregressionData.py
examples/.ipynb_checkpoints/: example-pipeline-checkpoint.ipynb
fri/: __init__.py  _version.py  base.py  baseline.py  bound.py  bounds.py  classification.py  compute.py  cvxpy_test.py  ensemble.py  fri.py  genData.py  grouping.py  l1models.py  lupi.py  lupi_base.py  lupi_bounds.py  lupi_data.py  lupi_model.py  lupi_optproblems.py  main.py  optproblems.py  ordinalregression.py  parameter_searcher.py  plot.py  plot_dash.py  regression.py  script.py  script2.py  script_new.py  script_old.py  utility.py  utils.py
fri.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fri/model/: __init__.py  base.py  base_cvxproblem.py  base_initmodel.py  base_lupi.py  base_type.py  baseline.py  bound.py  classification.py  fri.py  lupi_classification.py  lupi_ordinal_regression.py  lupi_ordinal_regression_exp.py  lupi_ordinal_regression_imp.py  lupi_regression.py  ordinal_regression.py  ordinal_regression_imp.py  regression.py  test_FRIBase.py
fri/old/: bounds.py  classification.py  l1models.py  optproblems.py  ordinalregression.py  (+1 more)
notebooks/: Feature contribution replacement and grouping.ipynb  Grouping Stability.ipynb  Guide.html  Simple Example Classification Data.ipynb  Simple Example Ordinal Regression Data.ipynb  Simple Example Regression Data.ipynb  Test_comm_detection-Copy1.ipynb  Test_comm_detection.ipynb  Test_conRanges.ipynb  Test_quadrant.ipynb  Test_shadow.ipynb  combining features.ipynb  exp_tools.py
rbclassifier/: __init__.py  _version.py  bounds.py  genData.py  optproblems.py  plot.py  rbclassifier.py
search/: search_index.json
skltemplate/: template.py
tests/: test_lupi.py  test_parameter_searcher.py
(+166 files in other folders)
