[tool.poetry]
name = "fri"
version = "8.1.0"
description = "Implementation of Feature Relevance Bounds method to perform Feature Selection and further analysis."
authors = ["Lukas Pfannschmidt <lukas@lpfann.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lpfann/fri"
homepage = "https://fri.lpfann.me"
keywords = ["feature selection","linear models","machine learning"]
classifiers = [
        "Intended Audience :: Science/Research",
        "Intended Audience :: Developers",
        "Development Status :: 4 - Beta",
        "Topic :: Scientific/Engineering :: Medical Science Apps.",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Scientific/Engineering :: Information Analysis",
]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19, !=1.19.4" # Exclude buggy version:  https://tinyurl.com/y3dm3h86
scipy = "^1.0"
scikit-learn = "^0.24"
joblib = "^1"
cvxpy = ">=1.0,<1.2"
ecos = "^2.0.7"
matplotlib = "^3.1"
arfs-gen = "^1"
importlib_metadata = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-cov = "^2.7"
pytest-xdist = "^2.2"
black = {version = "^20.8b1", allow-prereleases = true}
nbconvert = "^6"
portray = "^1.3.0"
pre-commit = "^2.1.1"
python-coveralls = "^2.9.3"
jupyter_client = "^6.1.5"

[tool.portray]
output_dir = "site"
docs_dir = "docs"

[tool.black]
line-length = 88
target-version = ['py36', 'py37','py38']

[tool.portray.mkdocs]
markdown_extensions =[
        "admonition",
        "codehilite",
        "extra",
        "pymdownx.details",
        "pymdownx.highlight"]
repo_name = "lpfann/fri"
repo_url = "https://github.com/lpfann/fri"

[tool.portray.mkdocs.theme]
favicon = "docs/favicon.ico"
logo = "docs/logo.png"
name = "material"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

